--- a/workflow/config.yaml
+++ b/workflow/config.yaml
@@ -16,6 +16,36 @@ conda_environment: "/envs/nextstrain.yaml"
 sequences: "data/201014_sequences.fasta"
 metadata: "data/201014_metadata.tsv"
 
+# Builds to run: subsampling + beas analysis
+builds:
+  eEurope:
+      subsampling_scheme: uniform_sarah
+      beast_analysis: 
+        - 201014_europe2
+  # europe3a:
+  #   subsampling_scheme: ssprop_Hubei
+  #   beast_analysis: 
+  #     - 201030_europe3
+  # europe3b:
+  #   subsampling_scheme: ssprop_China
+  #   beast_analysis: 
+  #     - 201030_europe3
+      # - 201113_europe3v2 # Uniformative priors for sampling proportions
+  # europe4: # Hubei
+  #   subsampling_scheme: earlyeurope3
+  #   beast_analysis: 
+  #     - "201102_europe4"
+  # europe4b: # China sequences, same analysis
+  #   subsampling_scheme: earlyeurope4
+  #   beast_analysis: 
+  #     - "201102_europe4"
+  # europe5: # Change times when Hubei lockdown, two flight matrix with mean dayly passengers
+  #  subsampling_scheme: earlyeurope3 #??
+  #  beast_analysis: 
+  #    - "201106_europe5"
+  #    - "201106_europe5b" #log flight matrix
+
+    
 
 # Define files used for external configuration. Common examples consist of a
 # list of strains to include and exclude from analyses, a reference sequence to
@@ -59,200 +89,157 @@ mask:
   mask_sites: "13402 24389 24390"
 
 
-# This is where we define which builds we'd like to run.
-# Each build needs a name, a defined subsampling process, and geographic attributes used for subsampling.
-# Geography is specified by build attributes (e.g., `region`, `country`, `division`, `location`) that are referenced from subsampling schemes.
-builds:
-  # europe4: # Hubei
-  #   subsampling_scheme: earlyeurope3
-  #   beast_analysis: 
-  #     - "201102_europe4"
-  # europe4b: # China sequences, same analysis
-  #   subsampling_scheme: earlyeurope4
-  #   beast_analysis: 
-  #     - "201102_europe4"
-  europe5: # Change times when Hubei lockdown, two flight matrix with mean dayly passengers
-    subsampling_scheme: earlyeurope3 #??
-    beast_analysis: 
-      - "201106_europe5"
-      - "201106_europe5b" #log flight matrix
-
-    
 
 # # Define subsampling scheme
 # Custom subsampling logic for regions like Europe where grouping by country
 # is the smallest resolution required.
 subsampling:
-  earlyeurope12:
-    # Focal samples
+  uniform_sarah: # This subsampling was used in europe1 and 2 with augur subsample rule from nextstrain
     hubei:
       group_by: "division"
       seq_per_group: 30
       query: --query "(division == 'Hubei') & (date<='2020-01-23')"
+      division: "Hubei"
+      country: "China"
+      region: "Asia"
+      min_date: "2019-12-24"
+      max_date: "2020-01-23"
     italy:
       group_by: "country"
       seq_per_group: 60
       query: --query "(country == 'Italy') & (date<='2020-03-08')"
+      country: "Italy"
+      region: "Europe"
+      min_date: "2020-01-29"
+      max_date: "2020-03-08"
     germany:
       group_by: "country"
       seq_per_group: 50
       query: --query "(country == 'Germany') & (date<='2020-03-08')"
+      country: "Germany"
+      region: "Europe"
+      min_date: "2020-01-28"
+      max_date: "2020-03-08"
     france:
       group_by: "country"
       seq_per_group: 50
       query: --query "(country == 'France') & (date<='2020-03-08')"
+      country: "France"
+      region: "Europe"
+      min_date: "2020-01-23"
+      max_date: "2020-03-08"
     spain:
       group_by: "country"
       seq_per_group: 40
       query: --query "(country == 'Spain') & (date<='2020-03-08')"
+      country: "Spain"
+      region: "Europe"
+      min_date: "2020-02-24"
+      max_date: "2020-03-08"
     othereuropean:
       group_by: "region"
       seq_per_group: 20
       query: --query "(region == 'Europe') & (country not in ['Italy', 'France', 'Germany', 'Spain']) & (date<='2020-03-08')"
+      region: "Europe"
+      exclude_country: ["France","Germany","Italy","Spain"]
+      min_date: "2020-01-29"
+      max_date: "2020-03-08"
 
-  earlyeurope3:
+  ssprop_Hubei:
     France:
       country: "France"
       region: "Europe"
       min_date: "2020-01-23"
       max_date: "2020-03-08"
       seq_per_deme: 50
-      focal: 1
+      prob: "cases"
     Germany:
       country: "Germany"
       region: "Europe"
       min_date: "2020-01-28"
       max_date: "2020-03-08"
       seq_per_deme: 50
-      focal: 1
+      prob: "cases"
     Hubei:
       division: "Hubei"
       country: "China"
       region: "Asia"
       min_date: "2019-12-24"
       max_date: "2020-01-23"
-      seq_per_deme: 50
-      focal: 1
+      seq_per_deme: 60
+      prob: "deaths"
     Italy:
       country: "Italy"
       region: "Europe"
       min_date: "2020-01-29"
       max_date: "2020-03-08"
       seq_per_deme: 60
-      focal: 1
+      prob: "cases"
     OtherEuropean:
       region: "Europe"
       exclude_country: ["France","Germany","Italy","Spain"]
       min_date: "2020-01-29"
       max_date: "2020-03-08"
-      seq_per_deme: 40
-      focal: 0
+      seq_per_deme: 30
+      prob: "cases_and_location"
     Spain:
       country: "Spain"
       region: "Europe"
       min_date: "2020-02-24"
       max_date: "2020-03-08"
       seq_per_deme: 50
-      focal: 1
+      prob: "cases"
 
-  earlyeurope3b:
+  ssprop_China:
     France:
       country: "France"
       region: "Europe"
       min_date: "2020-01-23"
       max_date: "2020-03-08"
       seq_per_deme: 50
-      focal: 1
+      prob: "cases"
     Germany:
       country: "Germany"
       region: "Europe"
       min_date: "2020-01-28"
       max_date: "2020-03-08"
       seq_per_deme: 50
-      focal: 1
-    Hubei:
-      division: "Hubei"
-      country: "China"
-      region: "Asia"
-      min_date: "2019-12-24"
-      max_date: "2020-03-08"
-      seq_per_deme: 40
-      focal: 1
-    Italy:
-      country: "Italy"
-      region: "Europe"
-      min_date: "2020-01-29"
-      max_date: "2020-03-08"
-      seq_per_deme: 60
-      focal: 1
-    OtherEuropean:
-      region: "Europe"
-      exclude_country: ["France","Germany","Italy","Spain"]
-      min_date: "2020-01-29"
-      max_date: "2020-03-08"
-      seq_per_deme: 40
-      focal: 0
-    Spain:
-      country: "Spain"
-      region: "Europe"
-      min_date: "2020-02-24"
-      max_date: "2020-03-08"
-      seq_per_deme: 50
-      focal: 1
-
-  earlyeurope4:
-    France:
-      country: "France"
-      region: "Europe"
-      min_date: "2020-01-23"
-      max_date: "2020-03-08"
-      seq_per_deme: 50
-      focal: 1
-    Germany:
-      country: "Germany"
-      region: "Europe"
-      min_date: "2020-01-28"
-      max_date: "2020-03-08"
-      seq_per_deme: 50
-      focal: 1
-    Hubei:
+      prob: "cases"
+    Hubei-China:
       country: "China"
       region: "Asia"
       min_date: "2019-12-24"
       max_date: "2020-01-23"
-      seq_per_deme: 50
-      focal: 1
+      seq_per_deme: 60
+      prob: "deaths"
     Italy:
       country: "Italy"
       region: "Europe"
       min_date: "2020-01-29"
       max_date: "2020-03-08"
       seq_per_deme: 60
-      focal: 1
+      prob: "cases"
     OtherEuropean:
       region: "Europe"
       exclude_country: ["France","Germany","Italy","Spain"]
       min_date: "2020-01-29"
       max_date: "2020-03-08"
-      seq_per_deme: 40
-      focal: 0
+      seq_per_deme: 30
+      prob: "cases_and_location"
     Spain:
       country: "Spain"
       region: "Europe"
       min_date: "2020-02-24"
       max_date: "2020-03-08"
       seq_per_deme: 50
-      focal: 1
-
-
-
+      prob: "cases"
 
 tree:
   tree-builder-args: "'-ninit 10 -n 4'"
 
 # TreeTime settings
 refine:
-  root: "EPI_ISL_402125/Hubei/2019-12-26 EPI_ISL_406798/Hubei/2019-12-26" 
+  root: "EPI_ISL_402123/Hubei/2019-12-24 EPI_ISL_406798/Hubei/2019-12-26" 
   clock_rate: 0.0008
   clock_std_dev: 0.0004
   coalescent: "skyline"
@@ -263,28 +250,28 @@ refine:
 
 # BEAST2 analysis settings
 beast:
-  # XML file for analysis
-  #xml:  ["201030_europe3.xml", "201030_europe3b.xml"]
   # BEAST2 jar file path
   jar: "/cluster/home/ceciliav/BDMM-Prime.jar"
   # List of parallel mcmc chains seeds to run 
-  n_mcmc: [1,2,3,4,5]
+  n_mcmc: [1,4,10]
+  #n_mcmc: [1,2,3,4,5]
   # Length of a mcmc chain, it has to be the same length than the one specified in the xml file
   l_mcmc: 10000000
   # Time for mcmc chains in cluster in minutes
   t_mcmc: 7200
+  t_traj: 720
   # Burnin fraction 
   burnin: 0.1
   # Log analyser bin
   log_analyser: loganalyser
-  min_ess: 200
+  # Minimum ESS value to combine chains
+  min_ess: 100
   # Log combiner bin
   log_combiner: logcombiner
   # Tree annotator bin
   tree_annotator: treeannotator
   mcc_heights: "mean"
-  # Trajectory Mapper xml
-  trajectoryMapper: "201102_europe4.trajectoryMapper.xml"
-
-
+  # Trajectories
+  n_traj: 500
+  resample: 5000
 
