--- a/workflow/config.yaml
+++ b/workflow/config.yaml
@@ -31,24 +31,14 @@ builds:
   #   beast_analysis: 
   #     - 201030_europe3
   # europe3b:
-  #   subsampling_scheme: ssprop_China
+  #   subsampling_scheme: ssprop_China_old
   #   beast_analysis: 
   #     - 201030_europe3
       # - 201113_europe3v2 # Uniformative priors for sampling proportions
-  # europe4: # Hubei
-  #   subsampling_scheme: earlyeurope3
-  #   beast_analysis: 
-  #     - "201102_europe4"
-  # europe4b: # China sequences, same analysis
-  #   subsampling_scheme: earlyeurope4
-  #   beast_analysis: 
-  #     - "201102_europe4"
-  # europe5: # Change times when Hubei lockdown, two flight matrix with mean dayly passengers
-  #  subsampling_scheme: earlyeurope3 #??
-  #  beast_analysis: 
-  #    - "201106_europe5"
-  #    - "201106_europe5b" #log flight matrix
-
+  europe3c:
+    subsampling_scheme: ssprop_China
+    beast_analysis: 
+      - 201030_europe3
     
 
 # Define files used for external configuration. Common examples consist of a
@@ -257,7 +247,7 @@ subsampling:
       seq_per_deme: 50
       prob: "cases"
 
-  ssprop_China:
+  ssprop_China_old:
     France:
       country: "France"
       region: "Europe"
@@ -301,12 +291,56 @@ subsampling:
       seq_per_deme: 50
       prob: "cases"
 
+  ssprop_China:
+    France:
+      country: "France"
+      region: "Europe"
+      min_date: "2020-01-23"
+      max_date: "2020-03-08"
+      seq_per_deme: 50
+      prob: "cases"
+    Germany:
+      country: "Germany"
+      region: "Europe"
+      min_date: "2020-01-28"
+      max_date: "2020-03-08"
+      seq_per_deme: 50
+      prob: "cases"
+    Hubei-China:
+      country: "China"
+      region: "Asia"
+      min_date: "2019-12-24"
+      max_date: "2020-01-23"
+      seq_per_deme: 50
+      prob: "deaths"
+    Italy:
+      country: "Italy"
+      region: "Europe"
+      min_date: "2020-01-29"
+      max_date: "2020-03-08"
+      seq_per_deme: 50
+      prob: "cases"
+    OtherEuropean:
+      region: "Europe"
+      exclude_country: ["France","Germany","Italy","Spain"]
+      min_date: "2020-01-29"
+      max_date: "2020-03-08"
+      seq_per_deme: 50
+      prob: "cases"
+    Spain:
+      country: "Spain"
+      region: "Europe"
+      min_date: "2020-02-24"
+      max_date: "2020-03-08"
+      seq_per_deme: 50
+      prob: "cases"
+
 tree:
   tree-builder-args: "'-ninit 10 -n 4'"
 
 # TreeTime settings
 refine:
-  root: "EPI_ISL_402123/Hubei/2019-12-24 EPI_ISL_406798/Hubei/2019-12-26" 
+  root: "EPI_ISL_402123/Hubei/2019-12-24" 
   clock_rate: 0.0008
   clock_std_dev: 0.0004
   coalescent: "skyline"
